site/wp-content/themes/nmedc/style.css
html,
body,
input,
button,
select,
textarea {
  font: 15px/30px "museo_sans_300regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  color: #231F20;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
}

body {
  margin: 0px;
}

a {
  color: #69BD45;
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

a:active,
a:focus {
  color: #1e4062;
}

p {
  padding-bottom: 15px;
  margin: 0px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #464646;
  padding: 0px;
  margin: 0px;
}

h1 {
  font-size: 25px;
  line-height: 30px;
  font-family: "museo_sans_700regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  color: #69BD45;
}

h2 {
  font-size: 35px;
  line-height: 40px;
}

h3 {
  font-size: 25px;
  line-height: 30px;
}

h4 {
  font-size: 25px;
  line-height: 30px;
}

h5 {
  font-size: 20px;
  line-height: 25px;
}

h6 {
  font-size: 13px;
}

b,
strong {
  font-family: "museo_sans_700regular", "Helvetica Neue", Helvetica, arial, sans-serif;
}

i,
em {
 font-family: "museo_sans_500italic", "Helvetica Neue", Helvetica, arial, sans-serif;
}

ul {
margin: 0px;
padding: 0px;
}

/* LAYOUT */
.container {
  width: 1024px;
  margin: 0px auto;
}


/* MAIN CONTENT */
#main .container {
  padding: 35px 0px;
}

#main .content-area {
  width: 800px;
  float: right;
}

#main .content-area h1.content-title {
  padding-bottom: 40px;
}

#main .content-area img {
  -webkit-box-shadow:  3px 3px 5px 0px rgba(0, 0, 0, .2);
  box-shadow:  3px 3px 5px 0px rgba(0, 0, 0, .2);
}

.main-slider {
  height: 500px;
}

.main-slider img {
  -webkit-box-shadow:  none;
  box-shadow:  none;
}

.main-slider p.wp-caption-text {
  background-color: #000;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 10px 300px 8px 10px;
  margin-top: -63px;
  z-index: 1100;
  position: relative;
  bottom: 0;
  color: #fff;
  font-family: "museo_sans_300regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  font-size: 13px;
  line-height: 18px;
  width: 490px;
}

#main-slider-nav {
  float: right;
  margin-top: -72px;
  z-index: 1300;
  position: relative;
  padding: 0px 12px;
}

#main-slider-nav a {
  color: #fff;
  padding: 0px 0px 0px 20px;
}

#main-slider-nav a:hover, 
#main-slider-nav a.activeSlide {
  color: #69BD45;
}

a.prev span#prev {
  float: left;
  display: block;
  margin-top: -300px;
  position: relative;
  z-index: 1400;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  background-image: url("images/arrows.png");
  background-repeat: no-repeat;
  background-position: 0 0;
  width: 50px;
  height: 50px;
}

a.next span#next {
  float: right;
  display: block;
  margin-top: -300px;
  position: relative;
  z-index: 1400;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  background-image: url("images/arrows.png");
  background-repeat: no-repeat;
  background-position: -50px 0;
  width: 50px;
  height: 50px;
}

.quote-slider {
  background-color: #DEEED4;
  font-family: "museo_sans_100italic", "Helvetica Neue", Helvetica, arial, sans-serif;
  margin: 20px 0px;
  height: 145px;
  font-size: 20px;
}

.quote-slider .quote {
  padding: 15px;
}

.quote-slider .quote span {
  font-size: 18px;
  margin-left: 15px;
}

.quote-slider .quote span.name {
  padding-top: 10px;
}

.quote-controls {
  margin-top: -60px;
  position: relative;
  z-index: 1400;
  height: 30px;
  float: right;
  margin-right: 20px;
}

a.quote-prev, #quote-slider-nav, a.quote-next {
  float: right;
  margin-left: 10px;
}

a.quote-prev, #quote-slider-nav a, a.quote-next {
  width: 30px;
  height: 50px;
}

#quote-slider-nav a {
  margin-left: 10px;
  display: inline-block;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  background-image: url("images/quote_slider.png");
  background-repeat: no-repeat;
  background-position: -40px 0;
}

#quote-slider-nav a:first-child {
  margin-left: 0px;
}

a.quote-prev span#prev {
  display: block;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  background-image: url("images/quote_slider.png");
  background-repeat: no-repeat;
  background-position: 0 0;
}

a.quote-next span#next {
  display: block;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  background-image: url("images/quote_slider.png");
  background-repeat: no-repeat;
  background-position: -80px 0;
}

.home-teasers {
  clear: both;
  height: 150px;
  text-align: center;
}

.home-teaser {
  width: 240px;
  float: left;
  margin-right: 21px;
}

.home-teaser:last-child {
  margin-right: 0px;
}

.home-teaser h5 {
  background-color: #69BD45;
  font-size: 14px;
  color: #fff;
  text-align: center;
  padding: 4px 0px 2px 0px;
}

.home-teaser p {
  padding: 10px 10px 2px 10px;
  font-family: "museo_sans_500italic", "Helvetica Neue", Helvetica, arial, sans-serif;
  font-size: 15px;
  line-height: 25px;
}

.home-teaser a.read-more {
  font-family: "museo_sans_700italic", "Helvetica Neue", Helvetica, arial, sans-serif;
  font-size: 12px;
}

.ad-space {
  width: 700px;
  height: 85px;
  margin: 0px auto;
  padding-top: 40px;
}

.content-body #searchform {
  float: left;
}

/* HEADER */
header {
  background-color: #231F20;
  width: 100%;
  height: 125px;
}

.branding {
  text-transform: lowercase;
  padding-top: 19px;
  width: 300px;
}

.branding img {
  float: left;
  padding: 6px 10px 0px 0px;
}

.branding h1 {
  font-family: "museo_sans_500regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  color: #69BD45;
  margin: 0px;
  font-size: 40px;
  line-height: 40px;
  padding: 0px;
  font-weight: 500;
}

.branding p.description {
  font-family: "museo_sans_700regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  color: #E2E3E4;
  font-size: 13px;
  line-height: 13px;
}

.search-and-social {
  float: right;
  margin-top: -60px;
  width: 270px;
}

#searchform {
  float: right;
}

#searchform label {
  display: none;
}

#searchform input {
  padding-left: 10px;
}

ul.social-links {
  float: left;
  padding-top: 5px;
}

ul.social-links li {
  display: inline-block;
  width: 30px;
}

ul.social-links li a {
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  display: block;
}

ul.social-links li.facebook a {
  background-image: url("images/social.png");
}

ul.social-links li.twitter a {
  background-image: url("images/social.png");
  background-position: -32px 0px;
}

/* NAVIGATION */
ul#menu-main-menu {
  padding: 0px;
  margin-top: 5px;
  border-top: 1px solid #fff;
  padding-left: 280px;
  font: 12px/15px "museo_sans_700regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  background-color: #231F20;
  height: 32px;
}

ul#menu-main-menu li {
  display: block;
  float: left;
  padding: 10px 0px 8px 0px;
  border-left: 1px solid #fff;
  margin: 0px;
}

ul#menu-main-menu li:first-child {
  padding-top: 0px;
}

ul#menu-main-menu > li:first-child a {
  background-image: url("images/home.png");
  background-repeat: no-repeat;
  background-position: 47% 50%;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  display: block;
  height: 14px;
  width: 33px;
}

ul#menu-main-menu > li:first-child a:hover {
  background-image: url("images/home-dark.png");
}

ul#menu-main-menu > li.current-menu-item:first-child a:hover {
  background-image: url("images/home.png");
}

ul#menu-main-menu li:last-child {
  border-right: 1px solid #fff;
}

ul#menu-main-menu li a {
  color: #DEEED4;
  padding: 10px 10px 8px 10px;
}

ul#menu-main-menu li a:hover {
  background-color: #6ABD45;
  text-decoration: none;
}

ul#menu-main-menu li.current-menu-item a {
  background-color: #0c6837;
}

ul#menu-main-menu ul.sub-menu {
  display: none;
  background-color: #231F20;
  position: absolute;
  margin-top: 8px;
  z-index: 2000;
  margin-left: -2px;
}

ul#menu-main-menu ul.sub-menu li {
  clear: both;
  width: 100%;
  padding: 0px;

}

ul#menu-main-menu ul.sub-menu li a {
  border-top: 0px;
  border-right: 1px solid #fff;
  border-bottom: 1px solid #fff;
  border-left: 0px;
  display: block;
  margin-right: 1px;
}

ul#menu-main-menu ul.sub-menu li a:hover {
}

ul#menu-main-menu > li:hover ul.sub-menu {
  display: block;
  overflow: hidden;
}


/* FOOTER */
footer {
  background-color: #231F20;
  width: 100%;
  height: 250px;
  color: #ffffff;
}

#footer-widgets {
  padding-top: 40px;
}

#text-3 {
  float: left;
  font-family: "museo_sans_500italic", "Helvetica Neue", Helvetica, arial, sans-serif;
  width: 500px;
  padding-bottom: 15px;
  border-bottom: 1px solid #fff;
  margin-bottom: 10px;
  margin-right: 40px;
}

footer h4 {
  font-family: "museo_300regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  font-size: 18px;
  color: #69bd45;
}

#text-3 a {
font-family: "museo_700regular", "Helvetica Neue", Helvetica, arial, sans-serif;

}

#text-4 {
  clear: left;
  float: left;
  width: 510px;
  font-family: "museo_sans_300regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  font-size: 10px;
  line-height: 14px;
  margin-right: 40px;
}

#text-4 h4 {
  display: none;
}

#text-6 {
  float: left;
  height: 178px;
  width: 220px;
  margin-top: -146px;
}

#text-6 li {
  list-style-type: none;
  font-family: "museo_sans_500regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 10px;
}

#text-6 li span.date {
  font-family: "museo_sans_100regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  font-size: 10px;
  display: block;
}

#text-6 li span.date a {
  color: #fff;
}

#text-5 {
  float: right;
  width: 160px;
  padding-top: 40px;
  padding-left: 40px;
  margin-top: -218px;
  margin-left: 260px;
  border-left: 1px solid #fff;
  height: 210px;
}


/* SIDEBAR */
#main-sidebar {
  width: 188px;
  float: left;
}

#main-sidebar .widget {
  background-color: #231F20;
  padding: 12px;
  color: #DEEED4;
  font-size: 11px;
  margin-bottom: 10px;
}

#main-sidebar h4 {
  text-transform: uppercase;
  font-family: "museo_sans_500regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  color: #DEEED4;
  margin: 0px;
  font-size: 12px;
  line-height: 15px;
  padding: 0px;
}

#main-sidebar h5 {
  font-family: "museo_sans_300regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  color: #69BD45;
  margin: 10px 0px;
  font-size: 12px;
  line-height: 15px;
  padding: 0px;
}

#main-sidebar ul {
  padding-left: 12px;
  font-family: "museo_sans_300italic", "Helvetica Neue", Helvetica, arial, sans-serif;
  line-height: 13px;
  margin-top: 5px;
}

#main-sidebar ul li {
  margin-bottom: 12px;
}

#main-sidebar .from-the-blog {
  height: 178px;
}

#main-sidebar .from-the-blog a {
  font-size: 14px;
  line-height: 20px;
  font-family: "museo_sans_500regular", "Helvetica Neue", Helvetica, arial, sans-serif;
  color: #69BD45;
}

/* BLOG */

.post-excerpt {
  border-bottom: 1px solid #d8e5d3;
  margin-bottom: 25px;
}

h2.excerpt-title {
  font-size: 25px;
}

.excerpt-post-date {
  font-family: "museo_sans_300italic", "Helvetica Neue", Helvetica, arial, sans-serif;
  font-size: 12px;
  line-height: 13px;
  margin-bottom: 10px;
}

pre,
code {
  font-size: 12px;
  font-family: Monaco, Menlo, monospace;
  padding: 5px 10px;
  background-color: #f8f8f8;
  border: 1px solid #e2e2e2;
  overflow: scroll;
}

hr {
  border-top: 1px solid #e2e2e2;
  border-right: none;
  border-bottom: none;
  border-left: none;
  margin: 10px 0 30px 0;
}

.container:after,
.clearfix:after {
  content: ".";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
  font-size: 0;
}

* html .clearfix {
  height: 1%;
  overflow: visible;
}

*:first-child + html .clearfix {
  min-height: 1%;
}

.clearfix {
  *zoom: 1;
}

